--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,19 @@
-asgiref==3.2.5
-astroid==2.3.3
-colorama==0.4.3
+asgiref==3.5.0
+bleach==4.1.0
 dj-database-url==0.5.0
-Django==3.0.4
-django-crispy-forms==1.9.0
-django-endless-pagination==2.0
+Django==3.2.10
+django-crispy-forms==1.14.0
 django-heroku==0.3.1
-django-hitcount==1.3.1
-django-summernote==0.8.11.6
-django-watson==1.5.4
-gunicorn==20.0.4
-isort==4.3.21
-lazy-object-proxy==1.4.3
-mccabe==0.6.1
-Pillow==7.0.0
-psycopg2==2.8.4
-pylint==2.4.4
-pytz==2019.3
-six==1.14.0
-sqlparse==0.3.1
-virtualenv==16.7.9
-whitenoise==5.0.1
-wrapt==1.11.2
+django-jazzmin==2.5.0
+django-summernote==0.8.20.0
+gunicorn==20.1.0
+packaging==21.3
+Pillow==9.0.1
+psycopg2==2.9.3
+pyparsing==3.0.7
+pytz==2022.1
+six==1.16.0
+sqlparse==0.4.2
+tzdata==2022.1
+webencodings==0.5.1
+whitenoise==6.0.0
