--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ psycopg2==2.9.3
 pyparsing==3.0.7
 pytz==2022.1
 six==1.16.0
+somepackage==1.2.3
 sqlparse==0.4.2
 tzdata==2022.1
 webencodings==0.5.1
